# fst

./: .gitignore  CMakeLists.txt  file_utils.cpp  file_utils.h  fst.cbp  indexing_worker.cpp  indexing_worker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  searching_worker.cpp  searching_worker.h  watcher.cpp  watcher.h
